--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,17 +92,19 @@
             <li><a href="working-with-the-waypoints-plugin.html">Waypoints</a></li>
             <li><a href="working-with-the-text-widget.html">Neatline Text</a></li>
         </ul>
-        <h2>Working with Neatline Stylesheets</h2>
+        <h2>Working with the Neatline Editor</h2>
            <ul>
+            <li><a href="editor-overview.html">Editor Overview</a></li>
+            <li><a href="exhibit-styles-tab.html">Exhibit Styles Tab</a></li>
            <li><a href="neatline-stylesheets.html">Using Neatline Stylesheets</a></li>
           </ul>
-          <h2>Working with the Neatline Editor</h2>
           <h3>Records</h3>
           <ul>
             <li><a href="records-overview.html">Records Overview</a></li>
             <li><a href="creating-records.html">Creating New Records</a></li>
              <li><a href="searching-records.html">Searching Records</a></li>
           </ul>
+        <h3>Editing Neatline Records</h3>
           <h3>Text Tab</h3>
           <ul>
             <li><a href="text-tab.html">Adding Text Content</a></li>
