--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
           <ul>
             <li><a href="exhibits-overview.html">Exhibits Overview</a></li>
             <li><a href="creating-exhibits.html">Creating New Exhibits</a></li>
-            <li><a href="map-based-exhibits.html">Map-base Exhibits</a></li>
+            <li><a href="map-based-exhibits.html">Map-based Exhibits</a></li>
             <li><a href="image-based-exhibits.html">Image-based Exhibits</a></li>
             <li><a href="managing-exhibits.html">Managing Exhibits</a></li>
             <li><a href="user-permissions.html">Managing User Permissions</a></li>
