editted and added text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,8 @@
           <ul>
             <li><a href="records-overview.html">Records Overview</a></li>
             <li><a href="creating-records.html">Creating New Records</a></li>
-             <li><a href="searching-records.html">Searching Records</a></li>
+            <li><a href="importing-omeka-items.html">Importing Omeka Items</a></li>
+            <li><a href="searching-records.html">Searching Records</a></li>
           </ul>
         <h3>Editing Neatline Records</h3>
           <h3>Text Tab</h3>
